sfdx-package/force-app/main/default/objects/Migration_Sync_State__c/Migration_Sync_State__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Migration Sync State</label>
</CustomObject>