sfdx-package/force-app/main/default/objects/Migration_Sync_State__c/fields/Account_Last_Sync__c.field-meta.xml
<CustomField>
    <fullName>Account_Last_Sync__c</fullName>
    <label>Account Last Sync</label>
    <type>DateTime</type>
</CustomField>