sfdx-package/force-app/main/default/objects/Migration_Sync_State__c/fields/Case_Last_Sync__c.field-meta.xml
<CustomField>
    <fullName>Case_Last_Sync__c</fullName>
    <label>Case Last Sync</label>
    <type>DateTime</type>
</CustomField>