sfdx-package/force-app/main/default/objects/Migration_Sync_State__c/fields/Contact_Last_Sync__c.field-meta.xml
<CustomField>
    <fullName>Contact_Last_Sync__c</fullName>
    <label>Contact Last Sync</label>
    <type>DateTime</type>
</CustomField>