sfdx-package/force-app/main/default/objects/Migration_Sync_State__c/fields/Opportunity_Last_Sync__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Last_Sync__c</fullName>
    <label>Opportunity Last Sync</label>
    <type>DateTime</type>
</CustomField>